styles/events/noel.css
:root {
  --color-bg1: #337a4d;
  --color-bg2: #f7f7fa;
  --color-bg3: #36934f;

  --color-main: #337a4d;
  --color-alt: #e0fff3;
  --color-form-bg: #e0fff3;
  --color-input-bg: #ebfff7;
  --color-input-border: #337a4d;

  --color-btn: #e7001b;
  --color-btn-hover: #337a4d;
  --color-btn-del: #e7001b;

  --color-modal: rgba(0, 47, 15, 0.4);
  --color-hover: #d2efd8;

  --color-white: #fff;
}

html {
  background: var(--color-bg1);
  background: linear-gradient(150deg, var(--color-bg2) 0%, var(--color-bg3) 100%);
}

h1, h2, h2.popUp {
  color: var(--color-main);
}

form, #notesList li, .modal-content {
  background-color: var(--color-form-bg);
  color: var(--color-main);
}

input, select {
  border: 1px solid var(--color-input-border);
  background: var(--color-input-bg);
  color: var(--color-main);
}

button.edit-button, .btn,
button[type="submit"], button[type="button"] {
  background-color: var(--color-btn);
  color: var(--color-white);
}

button.edit-button:hover, .btn:hover,
button[type="submit"]:hover, button[type="button"]:hover {
  background-color: var(--color-btn-hover);
  color: var(--color-white);
}

button.delete-button {
  background-color: var(--color-btn-del);
  color: var(--color-white);
}

button.delete-button:hover {
  background-color: var(--color-btn);
}

.install-button, #homeButton {
  background-color: var(--color-bg2);
  color: var(--color-main);
  border: 2px solid var(--color-main);
}

.install-button:hover, #homeButton:hover {
  background-color: var(--color-main);
  color: var(--color-white);
}

.install-button:active, #homeButton:active {
  background-color: var(--color-bg2);
  color: var(--color-main);
}

#homeButton img {
  filter: brightness(0) saturate(100%) invert(44%) sepia(13%) saturate(1995%) hue-rotate(89deg) brightness(84%) contrast(79%);
}

.modal {
  background-color: var(--color-modal);
}

.close {
  color: var(--color-main);
}

.close:hover,
.close:focus {
  color: var(--color-bg1);
}

#notesList li:hover {
  background-color: var(--color-hover);
}

.required {
  color: var(--color-main);
  font-weight: bold;
  text-shadow: 0 0 3px var(--color-alt), 0 0 6px var(--color-main);
}

::selection {
  background-color: var(--color-main);
  color: var(--color-alt);
}

.theme-image {
  position: fixed;
  pointer-events: none; 
  object-fit: contain;
  margin: 0 !important;
  padding: 0 !important;
  z-index: -1;
}

.bottom {
  bottom: 0px;
  left: 0;
  width: 100vw;
  max-width: 100vw;
}

.top-left {
  top: 0px;
  left: 0px;
  max-width: 25%;
  max-height: 25%;
}

.top-right {
  top: 0;
  right: 0;
  max-width: 40%;
  max-height: 40%;
}

